Add `/contracts/<contract>/info` endpoint
