# app/src/main/scala/org/alephium/explorer/api/ContractsEndpoints.scala
@@ -16,13 +16,15 @@
 
 package org.alephium.explorer.api
 
+import scala.collection.immutable.ArraySeq
+
 import sttp.tapir._
 import sttp.tapir.generic.auto._
 
 import org.alephium.api.Endpoints.jsonBody
 import org.alephium.explorer.api.BaseEndpoint
 import org.alephium.explorer.api.EndpointExamples._
-import org.alephium.explorer.api.model.{ContractParent, Pagination, SubContracts}
+import org.alephium.explorer.api.model.{ContractInfo, ContractParent, Pagination, SubContracts}
 import org.alephium.protocol.model.Address
 
 trait ContractsEndpoints extends BaseEndpoint with QueryParams {
@@ -31,6 +33,13 @@ trait ContractsEndpoints extends BaseEndpoint with QueryParams {
     baseEndpoint
       .tag("Contracts")
       .in("contracts")
+
+  val getContractInfo: BaseEndpoint[Address.Contract, ArraySeq[ContractInfo]] =
+    contractsEndpoint.get
+      .in(path[Address.Contract]("contract_address"))
+      .in("info")
+      .out(jsonBody[ArraySeq[ContractInfo]])
+      .description("Get contract info")
 
   val getParentAddress: BaseEndpoint[Address.Contract, ContractParent] =
     contractsEndpoint.get
